--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/runtime": "^7.4.4",
     "babel-jest": "^24.8.0",
     "eslint": "^5.16.0",
+    "eslint-config-rallycoding": "^3.2.0",
     "eslint-plugin-react": "^7.13.0",
     "eslint-plugin-react-native": "^3.7.0",
     "jest": "^24.8.0",
